# Noise-Cancel

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PROGRESS.md  README.md  mkdocs.yml  prd.json  prd.md  pyproject.toml
.github/workflows/: main.yml
app/: README.md  pubspec.yaml
app/android/: README.md
app/android/app/: build.gradle.kts
app/ios/: .gitignore  README.md
app/ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: app.dart  app_state.dart  main.dart
app/lib/models/: post.dart
app/lib/screens/: archive_screen.dart  settings_screen.dart  swipe_screen.dart
app/lib/services/: api_service.dart  second_brain_service.dart  share_service.dart  webhook_service.dart
app/lib/widgets/: expanded_content.dart  platform_badge.dart  (+1 more)
app/test/: api_service_test.dart  archive_screen_test.dart  expanded_content_test.dart  post_card_test.dart  post_model_test.dart  second_brain_service_test.dart  settings_screen_test.dart  share_service_test.dart  swipe_screen_test.dart  webhook_service_test.dart  widget_test.dart
docs/: competitive-analysis.md  index.md  installation.md  modules.md
migrations/: 001_initial.sql  002_add_summary.sql  003_add_swipe_status.sql  004_add_content_hash.sql  005_validate_post_platform.sql  006_add_embeddings.sql  007_add_notes.sql  008_add_feedback.sql  009_add_post_metadata.sql
noise_cancel/: __main__.py  cli.py  config.py  content_hash.py  database.py  models.py
noise_cancel/classifier/: engine.py  prompts.py  schemas.py
noise_cancel/dedup/: __init__.py  embedder.py  semantic.py
noise_cancel/delivery/: __init__.py  base.py  blocks.py  feedback.py  loader.py  notifier.py  slack.py
noise_cancel/digest/: __init__.py  service.py
noise_cancel/logger/: export.py  metrics.py  repository.py
noise_cancel/scraper/: __init__.py  anti_detection.py  auth.py  base.py  linkedin.py  playwright_base.py  reddit.py  registry.py  rss.py  threads.py  utils.py  x.py
scripts/: run-pipeline.sh
server/: dependencies.py  main.py  schemas.py
server/routers/: __init__.py  actions.py  digest.py  feedback.py  pipeline.py  posts.py
server/services/: pipeline.py
tests/: conftest.py  test_classifier.py  test_cli.py  test_config.py  test_content_hash.py  test_database.py  test_dedup.py  test_delivery.py  test_delivery_plugins.py  test_digest.py  test_flutter_scaffold.py  test_logger.py  test_models.py  test_reddit_scraper.py  test_rss_scraper.py  test_scraper.py  test_session_expiry.py  test_threads_scraper.py  test_us017_project_config.py  test_x_scraper.py
tests_server/: test_actions_router.py  test_dependencies.py  test_digest_router.py  test_feedback_router.py  test_main.py  test_notes_router.py  test_pipeline_router.py  test_posts_router.py  test_schemas.py
(+6 files in other folders)
