[project]
name = "noise-cancel"
version = "0.0.1"
description = "Tired of unwanted feed in LinkedIn! Try this noise cancellation, curated feed by AI Agents."
authors = [{ name = "NomaDamas", email = "vkehfdl1@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
dependencies = [
    "typer>=0.15.0",
    "playwright>=1.49.0",
    "anthropic>=0.45.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "platformdirs>=4.0.0",
    "rich>=13.9.0",
    "slack-sdk>=3.34.0",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
noise-cancel = "noise_cancel.cli:app"

[project.urls]
Homepage = "https://vkehfdl1.github.io/noise-cancel/"
Repository = "https://github.com/vkehfdl1/noise-cancel"
Documentation = "https://vkehfdl1.github.io/noise-cancel/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "ty>=0.0.1a16",

    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["noise_cancel", "server"]

[tool.ty.src]
exclude = ["app/ios/Flutter/ephemeral/**"]

[tool.ty.environment]
python = "./.venv"
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests", "tests_server"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"tests_server/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.deptry.per_rule_ignores]
DEP002 = ["playwright", "anthropic", "pydantic-settings", "slack-sdk", "uvicorn"]
